<resources>
    <string name="app_name">TicTacToe</string>
    <string name="action_settings">Settings</string>
    <string name="new_game">Новая игра</string>
    <string name="win_x">Победили Крестики</string>
    <string name="win_o">Победили Нолики</string>
    <string name="win_player">Вы победили</string>
    <string name="win_computer">Победил компьютер</string>
    <string name="no_winner">Ничья</string>
    <string name="player">Игрок</string>
    <string name="computer">Компьютер</string>
    <string name="easy">Легкий</string>
    <string name="hard">Сложный</string>
    <string name="first_step">Первый ход</string>
    <string name="player_vs_player">Игрок vs Игрок</string>
    <string name="player_vs_computer">Игрок vs Комп.</string>
</resources>
